force-app/main/default/objects/Staff__c/fields/Address_for_Communication__c.field-meta.xml
<CustomField>
    <fullName>Address_for_Communication__c</fullName>
    <label>Address for Communication</label>
    <type>TextArea</type>
</CustomField>