force-app/main/default/objects/Staff__c/fields/Salary__c.field-meta.xml
<CustomField>
    <fullName>Salary__c</fullName>
    <label>Salary</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Salary</valueSetName>
    </valueSet>
</CustomField>