force-app/main/default/objects/Staff__c/recordTypes/Non_Teaching_Staff.recordType-meta.xml
<RecordType>
    <fullName>Non_Teaching_Staff</fullName>
    <active>true</active>
    <label>Non Teaching Staff</label>
</RecordType>