force-app/main/default/objects/Staff__c/recordTypes/Teaching_Staff.recordType-meta.xml
<RecordType>
    <fullName>Teaching_Staff</fullName>
    <active>true</active>
    <label>Teaching Staff</label>
</RecordType>