force-app/main/default/objects/Staff__c/validationRules/SalaryValidate_Acnt.validationRule-meta.xml
<ValidationRule>
    <fullName>SalaryValidate_Acnt</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Designation__c , &apos;Accountant&apos;) , ISPICKVAL( Salary__c , &apos;10K&apos;))</errorConditionFormula>
    <errorDisplayField>Salary__c</errorDisplayField>
    <errorMessage>Please Ensure to select 15K for Accountant</errorMessage>
</ValidationRule>