force-app/main/default/objects/Staff__c/validationRules/SalaryValidate_JL.validationRule-meta.xml
<ValidationRule>
    <fullName>SalaryValidate_JL</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Designation__c , &apos;JL&apos;) , ISPICKVAL( Salary__c , &apos;25k&apos;) ||  ISPICKVAL( Salary__c , &apos;30k&apos;) || ISPICKVAL( Salary__c , &apos;35k&apos;))</errorConditionFormula>
    <errorDisplayField>Salary__c</errorDisplayField>
    <errorMessage>Please Ensure that you select  15K for JL</errorMessage>
</ValidationRule>