force-app/main/default/objects/Staff__c/validationRules/SalaryValidate_LA.validationRule-meta.xml
<ValidationRule>
    <fullName>SalaryValidate_LA</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Designation__c , &apos;LA&apos;) , ISPICKVAL( Salary__c , &apos;15K&apos;))</errorConditionFormula>
    <errorDisplayField>Salary__c</errorDisplayField>
    <errorMessage>Please Ensure to select 10K for  LA</errorMessage>
</ValidationRule>