force-app/main/default/objects/Staff__c/validationRules/SalaryValidate_SL.validationRule-meta.xml
<ValidationRule>
    <fullName>SalaryValidate_SL</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Designation__c ,&apos;SL&apos;) , ISPICKVAL( Salary__c , &apos;20K&apos;) || ISPICKVAL( Salary__c , &apos;30K&apos;) || ISPICKVAL( Salary__c , &apos;35K&apos;))</errorConditionFormula>
    <errorDisplayField>Salary__c</errorDisplayField>
    <errorMessage>Please Ensure to select 25K for SL</errorMessage>
</ValidationRule>